Fixed race condition in C99HatKernelBuilder.java and cleaned build